Fixed issues by sonar, added new label and improved check on valid buckets